--- a/leetcode.ipynb
+++ b/leetcode.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "id": "7e8f7725-fb43-4f4e-954a-299f2eacdc10",
    "metadata": {},
    "outputs": [],
@@ -21,6 +21,7 @@
     "import pandas as pd\n",
     "import sqlite3\n",
     "import re\n",
+    "import io\n",
     "\n",
     "conn = sqlite3.connect(\":memory:\")\n",
     "\n",
@@ -393,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 92,
    "id": "f273a626-27ec-4761-9ac1-92412cbd08d7",
    "metadata": {},
    "outputs": [
@@ -413,8 +414,6 @@
     }
    ],
    "source": [
-    "import io\n",
-    "\n",
     "temp = pd.read_csv(io.StringIO(\"\"\"\n",
     "    | user_id | name      | mail                    |\n",
     "    | ------- | --------- | ----------------------- |\n",
@@ -431,15 +430,347 @@
     "temp = temp.map(str.strip)\n",
     "print(temp[temp['mail'].str.fullmatch('[A-Za-z][A-Za-z0-9\\.\\-\\_]*\\@leetcode\\.com')])\n",
     "\n",
-    "# Write to DB\n",
+    "# Write to DB & solve using SQL\n",
     "temp.to_sql(name='temp', con=conn, index=False, if_exists='replace')\n",
     "print(pd.read_sql(\"select * from temp u where u.mail REGEXP '^[a-zA-Z]+[a-zA-Z0-9-._]*\\\\@leetcode\\\\.com$'\", con=conn))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ec93c48c-6c48-4f37-a20d-24bd829c53c9",
+   "metadata": {},
+   "source": [
+    "# 9.\n",
+    "\n",
+    "Date: 22nd Dec 2023<br>\n",
+    "Medium Leetcode: consecutive-numbers <br>\n",
+    "Solution: https://leetcode.com/problems/consecutive-numbers/submissions/1125892860/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "340e590f-b16e-4c05-b1a6-28687eff7493",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ConsecutiveNums</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ConsecutiveNums\n",
+       "0              1.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ConsecutiveNums</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ConsecutiveNums\n",
+       "0              1.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ConsecutiveNums</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ConsecutiveNums\n",
+       "0              1.0"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp = pd.read_csv(io.StringIO(\"\"\"\n",
+    "+----+-----+\n",
+    "| id | num |\n",
+    "+----+-----+\n",
+    "| 1  | 1   |\n",
+    "| 2  | 1   |\n",
+    "| 3  | 1   |\n",
+    "| 4  | 2   |\n",
+    "| 5  | 1   |\n",
+    "| 6  | 2   |\n",
+    "| 7  | 2   |\n",
+    "+----+-----+\n",
+    "\"\"\"), sep=\"|\", skiprows=2)\n",
+    "\n",
+    "# Some cleaning\n",
+    "temp = temp.iloc[1:, 1:-1].dropna()\n",
+    "temp.columns = temp.columns.map(str.strip)\n",
+    "\n",
+    "# Python iterative solution\n",
+    "def consecutive_numbers_py(logs: pd.DataFrame) -> pd.DataFrame:\n",
+    "    result = []\n",
+    "    resultSet = set()\n",
+    "\n",
+    "    prev = None\n",
+    "    for num in logs['num'].values:\n",
+    "        if prev is None:\n",
+    "            prev = [num, 1]\n",
+    "        elif prev[0] == num:\n",
+    "            prev[1] += 1\n",
+    "        else:\n",
+    "            if prev[1] >= 3 and prev[0] not in resultSet:\n",
+    "                result.append(prev[0])\n",
+    "                resultSet.add(prev[0])\n",
+    "            prev = [num, 1]\n",
+    "\n",
+    "    if prev is not None and prev[1] >= 3 and prev[0] not in resultSet:\n",
+    "        result.append(prev[0])\n",
+    "        resultSet.add(prev[0])\n",
+    "\n",
+    "    return pd.DataFrame({\"ConsecutiveNums\": result})\n",
+    "\n",
+    "# Pandas solution\n",
+    "def consecutive_numbers_df(logs: pd.DataFrame) -> pd.DataFrame:\n",
+    "    # Code starts here\n",
+    "    df = logs.copy()\n",
+    "    df['diff_1'] = df.groupby(\"num\")[\"id\"].diff()\n",
+    "    df['diff_2'] = df.groupby(\"num\")[\"id\"].diff(periods=2)\n",
+    "    df = df[(df['diff_1'] == 1) & (df['diff_2'] == 2)]['num'].rename(\"ConsecutiveNums\").to_frame().drop_duplicates().reset_index(drop=True)\n",
+    "    return df\n",
+    "\n",
+    "display(consecutive_numbers_py(temp))\n",
+    "display(consecutive_numbers_df(temp))\n",
+    "\n",
+    "# SQL Solution\n",
+    "temp.to_sql(\"temp\", con=conn, index=False, if_exists='replace')\n",
+    "\n",
+    "pd.read_sql(\"\"\"\n",
+    "with temp_1 as (\n",
+    "    select \n",
+    "        t.id, \n",
+    "        t.num, \n",
+    "        t.id - lag(t.id, 1) over(partition by t.num order by t.id) as diff_1,\n",
+    "        t.id - lag(t.id, 2) over(partition by t.num order by t.id) as diff_2 \n",
+    "    from temp t\n",
+    ")\n",
+    "\n",
+    "select distinct num ConsecutiveNums from temp_1 where diff_1 = 1 and diff_2 = 2\n",
+    "\"\"\", con=conn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "603a2c87-bc46-41e9-a312-d3e0304c7dfc",
+   "metadata": {},
+   "source": [
+    "# 10.\n",
+    "\n",
+    "Date: 22nd Dec 2023<br>\n",
+    "Medium Leetcode: customers-who-never-order<br>\n",
+    "Solution: https://leetcode.com/problems/customers-who-never-order/submissions/1125909085/\n",
+    "\n",
+    "#### SQL Solution:\n",
+    "```sql\n",
+    "select c.name Customers\n",
+    "from Customers c \n",
+    "left join Orders o on c.id = o.customerId \n",
+    "where o.id is Null\n",
+    "```\n",
+    "\n",
+    "#### Pandas Solution:\n",
+    "```python\n",
+    "def find_customers(customers: pd.DataFrame, orders: pd.DataFrame) -> pd.DataFrame:\n",
+    "    result = customers.loc[~customers['id'].isin(orders['customerId']), 'name'].to_frame()\n",
+    "    result = result.rename({\"name\": \"Customers\"}, axis=1)\n",
+    "    return resultn\u0000:`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd3e1f11-0af5-4b55-ad19-abbd1805afea",
+   "metadata": {},
+   "source": [
+    "# 11.\n",
+    "\n",
+    "Date: 22nd Dec 2023<br>\n",
+    "Easy Leetcode: biggest-single-number<br>\n",
+    "Solution: https://leetcode.com/problems/biggest-single-number/submissions/1125925499/\n",
+    "\n",
+    "```sql\n",
+    "with temp as (\n",
+    "    select num \n",
+    "    from MyNumbers\n",
+    "    group by num \n",
+    "    having count(num) = 1\n",
+    ")\n",
+    "\n",
+    "select max(num) num from temp\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "1edd8fc1-1235-4ebe-9fdf-789e2ff3620d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<property at 0x7f99e9797470>"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def biggest_single_number(my_numbers: pd.DataFrame) -> pd.DataFrame:\n",
+    "    df = my_numbers.value_counts().sort_index()\n",
+    "    df = df[df == 1].iloc[-1:].index\n",
+    "    return df.to_frame() if len(df) else pd.DataFrame({\"num\": [None]}) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b691b6a-b3a5-40fb-94c3-543dfefdb102",
+   "metadata": {},
+   "source": [
+    "# 12.\n",
+    "\n",
+    "Date; 22nd Dec 2023<br>\n",
+    "Easy Leetcode: summary-ranges<br>\n",
+    "Solution: https://leetcode.com/problems/summary-ranges/submissions/1125948046/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7811fd0-522f-41ff-8b88-b9078fc047b0",
+   "id": "30514c87-c164-4aa5-8b03-9e8ddf2b3cfe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def summaryRanges(self, nums: List[int]) -> List[str]:\n",
+    "        \n",
+    "        result = []\n",
+    "        curr = []\n",
+    "        for num in nums:\n",
+    "                if not curr or curr[-1] == num - 1:\n",
+    "                    curr.append(num)\n",
+    "                else:\n",
+    "                    if len(curr) == 1:\n",
+    "                        result.append(str(curr[0]))\n",
+    "                    else:\n",
+    "                        result.append(f\"{curr[0]}->{curr[-1]}\")\n",
+    "                    curr = [num]\n",
+    "\n",
+    "        # Residues remain\n",
+    "        if len(curr) > 0:\n",
+    "            if len(curr) == 1:\n",
+    "                result.append(str(curr[0]))\n",
+    "            else:\n",
+    "                result.append(f\"{curr[0]}->{curr[-1]}\")\n",
+    "\n",
+    "        return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a5a9177-c1bb-4724-8042-578e8e92b2e3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -447,7 +778,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8654c85e-612f-4b0c-a04b-feb3953aa473",
+   "id": "26d57e44-6780-4cd4-b165-f03a9fabe0b6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a362940-4098-4138-a55b-f592ae400038",
    "metadata": {},
    "outputs": [],
    "source": []
