repo restructuring + docker-compose for views

--- a/100L30D.ipynb
+++ b/100L30D.ipynb
@@ -6,13 +6,20 @@
    "metadata": {},
    "source": [
     "# 100L30D\n",
+    "![28%](https://progress-bar.dev/28?title=progress&width=100)\n",
     "\n",
-    "Solving 100 Leetcode problems in 30 days."
+    "#### Description:\n",
+    "- Solving 100 Leetcode problems of varying difficulty in 30 days.<br>\n",
+    "- Languange of choice: `Python`, `SQL`<br>\n",
+    "\n",
+    "#### Timelines:\n",
+    "- Start Date: 20th Dec 2023\n",
+    "- Challenge End Date: 19th Jan 2023"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 5,
    "id": "7e8f7725-fb43-4f4e-954a-299f2eacdc10",
    "metadata": {},
    "outputs": [],
@@ -59,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 6,
    "id": "49ce7cff-38d1-473f-a574-6a061801eb73",
    "metadata": {},
    "outputs": [],
@@ -86,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 7,
    "id": "9e9777fa-3395-4d7a-aedb-d4cc5c32c946",
    "metadata": {},
    "outputs": [
@@ -96,7 +103,7 @@
        "2"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 8,
    "id": "cbfad5bf-ac04-43b7-a300-f3c464fa6885",
    "metadata": {},
    "outputs": [],
@@ -162,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 9,
    "id": "d3dfc31e-818d-4ae4-a986-0f6eff700890",
    "metadata": {},
    "outputs": [
@@ -172,7 +179,7 @@
        "[1, 10, 45, 120, 210, 252, 210, 120, 45, 10, 1]"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 10,
    "id": "5ab2fb01-1837-48aa-a8e8-3db631253c49",
    "metadata": {},
    "outputs": [],
@@ -246,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 11,
    "id": "7559ac15-cb65-4a48-9a75-ea5ca2551588",
    "metadata": {},
    "outputs": [
@@ -256,7 +263,7 @@
        "58"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 12,
    "id": "a2ca17a7-f7f9-4838-b8af-7caf4b786274",
    "metadata": {},
    "outputs": [],
@@ -300,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 13,
    "id": "2b1e8f16-2fc2-48e7-b873-060cdcdcf167",
    "metadata": {},
    "outputs": [],
@@ -344,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 14,
    "id": "ec4bae1a-ab79-477b-acfe-4e7b5521b0c5",
    "metadata": {},
    "outputs": [],
@@ -374,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 15,
    "id": "42d718fd-dd4e-4db1-8e00-6fe31bf46be4",
    "metadata": {},
    "outputs": [],
@@ -408,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 16,
    "id": "f273a626-27ec-4761-9ac1-92412cbd08d7",
    "metadata": {},
    "outputs": [
@@ -463,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 17,
    "id": "340e590f-b16e-4c05-b1a6-28687eff7493",
    "metadata": {},
    "outputs": [
@@ -587,7 +594,7 @@
        "0              1.0"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +690,8 @@
     "def find_customers(customers: pd.DataFrame, orders: pd.DataFrame) -> pd.DataFrame:\n",
     "    result = customers.loc[~customers['id'].isin(orders['customerId']), 'name'].to_frame()\n",
     "    result = result.rename({\"name\": \"Customers\"}, axis=1)\n",
-    "    return resultn\u0000:`"
+    "    return result\n",
+    "```"
    ]
   },
   {
@@ -711,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 18,
    "id": "1edd8fc1-1235-4ebe-9fdf-789e2ff3620d",
    "metadata": {},
    "outputs": [],
@@ -736,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 19,
    "id": "30514c87-c164-4aa5-8b03-9e8ddf2b3cfe",
    "metadata": {},
    "outputs": [],
@@ -780,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 20,
    "id": "26d57e44-6780-4cd4-b165-f03a9fabe0b6",
    "metadata": {},
    "outputs": [],
@@ -803,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 21,
    "id": "5b332f23-242b-4bff-b3d4-58ba2a6051d4",
    "metadata": {},
    "outputs": [
@@ -813,7 +821,7 @@
        "6"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 22,
    "id": "286dd298-9a6f-4f39-aee0-4d617fb23ef0",
    "metadata": {},
    "outputs": [],
@@ -870,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 23,
    "id": "3f7be11e-be86-4691-a613-443bf051c496",
    "metadata": {},
    "outputs": [
@@ -878,7 +886,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://tinyurl.com/puEDVW\n"
+      "https://tinyurl.com/AYonVq\n"
      ]
     }
    ],
@@ -939,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 24,
    "id": "b6dc8842-89d4-431e-9385-7fdacd8f3953",
    "metadata": {},
    "outputs": [],
@@ -974,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 25,
    "id": "9421e5a6-7300-4107-a601-e1f1b90fe761",
    "metadata": {},
    "outputs": [],
@@ -1027,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 26,
    "id": "72963fb2-fac0-402a-829e-f6b3ca13c202",
    "metadata": {},
    "outputs": [
@@ -1138,7 +1146,7 @@
        "2      Leetcode             8000.0"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1210,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 27,
    "id": "641e2693-f755-4b7c-8d45-15ded8fcdc7e",
    "metadata": {},
    "outputs": [
@@ -1363,7 +1371,7 @@
        "2                 2000.0  "
       ]
      },
-     "execution_count": 251,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1448,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 28,
    "id": "c3fe25ad-56eb-4b75-9846-9ea61669327b",
    "metadata": {},
    "outputs": [
@@ -1466,7 +1474,7 @@
        "9"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1503,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 29,
    "id": "707c6740-4f90-4dd2-b243-f782255239fd",
    "metadata": {},
    "outputs": [],
@@ -1535,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 30,
    "id": "0865eeaf-f3c8-45a9-93f9-1b5b0b31dd18",
    "metadata": {},
    "outputs": [
@@ -1545,7 +1553,7 @@
        "1"
       ]
      },
-     "execution_count": 254,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1569,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 31,
    "id": "45ab5e5f-5821-47b0-9c7f-d0a14074d65e",
    "metadata": {},
    "outputs": [],
@@ -1637,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 38,
    "id": "940607bd-d4cd-4f6c-9453-64e0ef7de2e3",
    "metadata": {},
    "outputs": [
@@ -1645,7 +1653,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████| 362880/362880 [00:01<00:00, 258385.05it/s]\n"
+      "100%|#######################################################################| 362880/362880 [00:01<00:00, 263237.24it/s]\n"
      ]
     }
    ],
@@ -1683,7 +1691,7 @@
     "assert validate(rearrange([6,2,0,9,7]))\n",
     "assert validate(rearrange([1,2,3,4,5,6]))\n",
     "\n",
-    "for arr in tqdm.tqdm(itertools.permutations(range(9), 9), total=math.perm(9, 9)):\n",
+    "for arr in tqdm.tqdm(itertools.permutations(range(9), 9), total=math.perm(9, 9), ascii=True):\n",
     "    prev = None\n",
     "    curr = arr\n",
     "    while prev is None or any(map(lambda x: x[0] != x[1], zip(prev, curr))):\n",
@@ -1706,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 33,
    "id": "c2d9d9bb-efca-4eb2-9aff-46570528fdd6",
    "metadata": {},
    "outputs": [
@@ -1716,7 +1724,7 @@
        "False"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1760,7 +1768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 34,
    "id": "ca1fc8c6-3e7d-4c7e-bc07-630d1e08ed9b",
    "metadata": {},
    "outputs": [],
@@ -1809,7 +1817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 36,
    "id": "4c3b1862-bef3-40fd-b45c-41f41cf22ae3",
    "metadata": {},
    "outputs": [
@@ -1892,7 +1900,7 @@
        "0          11"
       ]
      },
-     "execution_count": 286,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1913,7 +1921,7 @@
     "\n",
     "# Doing it the Pandas way\n",
     "temp['salary'] = temp['salary'].astype(float)\n",
-    "missing_ids = np.setdiff1d(temp['manager_id'].dropna(), temp['employee_id'])\n",
+    "missing_ids = set(temp['manager_id'].dropna()) - set(temp['employee_id'])\n",
     "\n",
     "_ = temp.loc[\n",
     "    (temp['salary'] < 30_000) & \n",
@@ -1942,20 +1950,57 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f0c8a366-49e5-4ef0-80fe-0fa9eaac6566",
+   "cell_type": "markdown",
+   "id": "e66e0ff4-8a0a-4055-bf6b-601c8ab52804",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 28.\n",
+    "Date: 25th Dec 2023<br>\n",
+    "Easy Leetcode: min-cost-climbing-stairs<br>\n",
+    "Solution: https://leetcode.com/problems/min-cost-climbing-stairs/submissions/1127787644/"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "2866337c-5fd0-4ee1-a828-bcaec7028651",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def calcCost(self, cost: List[int], index: int, cache: dict[int, int]) -> int:\n",
+    "\n",
+    "        if index in cache:\n",
+    "            return cache[index]\n",
+    "        \n",
+    "        else:\n",
+    "\n",
+    "            if index >= len(cost) - 1:\n",
+    "                res = sum(cost[index:])\n",
+    "\n",
+    "            else:\n",
+    "                res = min(\n",
+    "                    cost[index] + self.calcCost(cost, index + 1, cache),\n",
+    "                    cost[index] + self.calcCost(cost, index + 2, cache)\n",
+    "                )\n",
+    "\n",
+    "            cache[index] = res\n",
+    "            return res\n",
+    "\n",
+    "    def minCostClimbingStairs(self, cost: List[int]) -> int:\n",
+    "\n",
+    "        # DP - setting a cache\n",
+    "        cache = dict()\n",
+    "\n",
+    "        return min(\n",
+    "            self.calcCost(cost, index=0, cache=cache),\n",
+    "            self.calcCost(cost, index=1, cache=cache)\n",
+    "        )\n",
+    "\n",
+    "# Testing out solution with sample testcases\n",
+    "assert Solution().minCostClimbingStairs([1,100,1,1,1,100,1,1,100,1]) == 6\n",
+    "assert Solution().minCostClimbingStairs([10,15,20]) == 15"
+   ]
   },
   {
    "cell_type": "code",
@@ -2001,6 +2046,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "09b611a5-96ae-4271-b48a-7ae272d76a63",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b47b399-92dc-44aa-a1bd-6b29dc330f14",
    "metadata": {},
    "outputs": [],
    "source": []
