Day 7 - Check In

--- a/100L30D.ipynb
+++ b/100L30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 100L30D\n",
-    "![32%](https://progress-bar.dev/32?title=progress&width=100)\n",
+    "![35%](https://progress-bar.dev/35?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 100 Leetcode problems of varying difficulty in 30 days.<br>\n",
@@ -2517,9 +2517,180 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cc8cebb4-1d43-4935-bfa5-3f485a279423",
+   "metadata": {},
+   "source": [
+    "# 32.\n",
+    "Date: 26th Dec 2023<br>\n",
+    "Medium Leetcode: subrectangle-queries<br>\n",
+    "Solution: https://leetcode.com/problems/subrectangle-queries/submissions/1128517749/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "8557565c-8517-48aa-bb83-3e86315dd80b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SubrectangleQueries:\n",
+    "\n",
+    "    def __init__(self, rectangle: List[List[int]]):\n",
+    "        self.rectangle = rectangle\n",
+    "        self.rows = len(self.rectangle)\n",
+    "        self.cols = len(self.rectangle[0])\n",
+    "        self.ops = []\n",
+    "\n",
+    "    def updateSubrectangle(self, row1: int, col1: int, row2: int, col2: int, newValue: int) -> None:\n",
+    "        self.ops.append([row1, col1, row2, col2, newValue])\n",
+    "\n",
+    "    def getValue(self, row: int, col: int) -> int:\n",
+    "        for op in self.ops[::-1]:\n",
+    "            if SubrectangleQueries.is_point_inside_subrectangle(row, col, *op[:-1]):\n",
+    "                return op[-1]\n",
+    "        return self.rectangle[row][col]\n",
+    "\n",
+    "    def is_point_inside_subrectangle(p_row, p_col, row_1, col_1, row_2, col_2) -> bool:\n",
+    "        return row_1 <= p_row <= row_2 and col_1 <= p_col <= col_2\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        res = \"\"\n",
+    "        for row in self.rectangle:\n",
+    "            res += f'{\", \".join(map(lambda x: str(x).rjust(3), row))}\\n'\n",
+    "        return res\n",
+    "\n",
+    "# Sample calls\n",
+    "temp = SubrectangleQueries([[1,2,1],[4,3,4],[3,2,1],[1,1,1]])\n",
+    "assert temp.getValue(*[0,2]) == 1\n",
+    "temp.updateSubrectangle(*[0,0,3,2,5])\n",
+    "assert temp.getValue(*[0,2]) == 5\n",
+    "assert temp.getValue(*[3,1]) == 5\n",
+    "temp.updateSubrectangle(*[3,0,3,2,10])\n",
+    "assert temp.getValue(*[3,1]) == 10\n",
+    "assert temp.getValue(*[0,2]) == 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "702699f0-7281-4d25-a93f-470fef1e676c",
+   "metadata": {},
+   "source": [
+    "# 33.\n",
+    "Date: 26th Dec 2023<br>\n",
+    "Medium Leetcode: find-the-original-array-of-prefix-xor<br>\n",
+    "Solution: https://leetcode.com/problems/find-the-original-array-of-prefix-xor/submissions/1128524993/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "916e601b-4b80-4852-94a5-3108d874ed69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 7, 2, 3, 2]"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_original_arr(arr: list[list[int]]):\n",
+    "    accumulated_xor = 0\n",
+    "    res = []\n",
+    "    for n in arr:\n",
+    "        res.append(accumulated_xor ^ n)\n",
+    "        accumulated_xor = accumulated_xor ^ res[-1]\n",
+    "    return res\n",
+    "\n",
+    "get_original_arr([5,2,0,3,1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "117eb9b6-91cd-4c10-9fc8-a62c1046c28a",
+   "metadata": {},
+   "source": [
+    "# 34.\n",
+    "Date: 26th Dec 2023<br>\n",
+    "Medium Leetcode: insert-greatest-common-divisors-in-linked-list<br>\n",
+    "Solution: https://leetcode.com/problems/insert-greatest-common-divisors-in-linked-list/submissions/1128528173/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "09e9f72f-f27c-4a70-a698-cac8a5472846",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "\n",
+    "    class ListNode:\n",
+    "         def __init__(self, val=0, next=None):\n",
+    "             self.val = val\n",
+    "             self.next = next\n",
+    "    \n",
+    "    def insertGreatestCommonDivisors(self, head):\n",
+    "        curr = head \n",
+    "        while curr.next != None:\n",
+    "            to_insert = ListNode(val=math.gcd(curr.val, curr.next.val), next=curr.next)\n",
+    "            curr.next = to_insert\n",
+    "            curr = to_insert.next\n",
+    "\n",
+    "        return head"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ed06e98-ee02-4df9-aef9-451feee791de",
+   "metadata": {},
+   "source": [
+    "# 35.\n",
+    "Date: 26th Dec 2023<br>\n",
+    "Medium Leetcode: maximum-number-of-coins-you-can-get<br>\n",
+    "Solution: https://leetcode.com/problems/maximum-number-of-coins-you-can-get/submissions/1128578272/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "7b7ab538-7086-43aa-ba4b-275e8d89dce5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def slide(arr: List[int]) -> int:\n",
+    "    arr.sort()\n",
+    "    res = 0\n",
+    "    n = len(arr)\n",
+    "    n_iters = len(arr) // 3\n",
+    "    for i in range(1, n_iters + 1):\n",
+    "        res += arr[-i * 2]\n",
+    "    return res\n",
+    "\n",
+    "slide([2,4,1,2,7,8])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8557565c-8517-48aa-bb83-3e86315dd80b",
+   "id": "0752bdad-befc-4f79-88fd-55f41718271e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2527,7 +2698,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef53a300-93c5-4117-b630-e7c632f7414a",
+   "id": "91fa7e76-e421-4781-b0e2-fd6e00cdbfb1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbcb7962-3b4f-4e0e-933f-26897ada8d45",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "009307c8-392c-41dd-9328-819820855537",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f142b664-b62b-4c66-b742-6c942aa86451",
    "metadata": {},
    "outputs": [],
    "source": []
