--- a/100L30D.ipynb
+++ b/100L30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 100L30D\n",
-    "![40%](https://progress-bar.dev/40?title=progress&width=100)\n",
+    "![46%](https://progress-bar.dev/46?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 100 Leetcode problems of varying difficulty in 30 days.<br>\n",
@@ -3151,25 +3151,297 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c3f7456-9473-46c8-8579-0264eb610005",
+   "cell_type": "markdown",
+   "id": "1cfadc55-e871-4898-8f8a-24adcd59548e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 41.\n",
+    "Date: 28th Dec 2023<br>\n",
+    "Medium Leetcode: combination-sum<br>\n",
+    "Solution: https://leetcode.com/problems/combination-sum/submissions/1130137369/"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "009307c8-392c-41dd-9328-819820855537",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2, 2, 3], [7]]\n",
+      "[[2, 3], [5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def solve(self, candidates: List[int], target: int, combination: List[int] = []) -> None:\n",
+    "        if target == 0:\n",
+    "            self.solutions.append(combination)\n",
+    "        elif target < 0 or len(candidates) == 0:\n",
+    "            pass\n",
+    "        else:\n",
+    "            pick = self.solve(candidates, target - candidates[0], combination=[*combination, candidates[0]]) \n",
+    "            \n",
+    "            if target > candidates[0]:\n",
+    "                no_pick = self.solve(candidates[1:], target, combination=[*combination])\n",
+    "        \n",
+    "    def combinationSum(self, candidates: List[int], target: int) -> List[List[int]]:\n",
+    "        self.solutions = []\n",
+    "\n",
+    "        # Sort for optimization - if candidates[0] > currTarget discard the no pick\n",
+    "        candidates.sort()\n",
+    "        \n",
+    "        self.solve(candidates, target)\n",
+    "        return self.solutions\n",
+    "\n",
+    "# Testing the solution\n",
+    "print(Solution().combinationSum([2,3,6,7], 7))\n",
+    "print(Solution().combinationSum([2,3,5], 5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e42b8cb-2bf2-4ff5-bcbb-1f968b6cf648",
+   "metadata": {},
+   "source": [
+    "# 42.\n",
+    "Date: 28th Dec 2023<br>\n",
+    "Medium Leetcode: number-of-subsequences-that-satisfy-the-given-sum-condition<br>\n",
+    "Solution: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "df20c4bc-70ae-442e-8098-795723469771",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def all_possible_combination_count(n):\n",
+    "        return sum(math.comb(n, _) for _ in range(1, n + 1))\n",
+    "        \n",
+    "    def numSubseq(self, nums: List[int], target: int) -> int:\n",
+    "        '''https://www.youtube.com/watch?v=xCsIkPLS4Ls'''\n",
+    "        # Sort the array - order doesn't matter since we are computing the min and max of the resultant subsequences\n",
+    "        nums.sort()\n",
+    "\n",
+    "        # Note that we are only initializing j once, if for a smaller number nums[i], nums[j] is the maximum number possible \n",
+    "        # then for a larger number nums[i+1], we can only have values nums[j] or lesser\n",
+    "        # Reason behind using `pow`: https://stackoverflow.com/a/59143871\n",
+    "        res = 0\n",
+    "        j = len(nums) - 1\n",
+    "        mod = 10 ** 9 + 7\n",
+    "        for i in range(len(nums)):\n",
+    "            while nums[i] + nums[j] > target and i <= j:\n",
+    "                j -= 1\n",
+    "            if i <= j:\n",
+    "                res += pow(2, j - i, mod)\n",
+    "                \n",
+    "        return res % mod\n",
+    "\n",
+    "    def num_sub_seq_brute(self, nums: List[int], target: int) -> int:\n",
+    "        res = 0\n",
+    "        for k in range(1, len(nums) + 1):\n",
+    "            for combination in itertools.combinations(nums, k):\n",
+    "                if max(combination) + min(combination) <= target:\n",
+    "                    res += 1\n",
+    "        return res\n",
+    "    \n",
+    "# Testing the solution\n",
+    "assert Solution().numSubseq([3,5,6,7], 9) == 4\n",
+    "assert Solution().numSubseq([3,3,6,8], 10) == 6\n",
+    "assert Solution().numSubseq([2,3,3,4,6,7], 12) == 61"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b618d43d-b4b7-4da1-936a-7fc34d2918ac",
+   "metadata": {},
+   "source": [
+    "# 43.\n",
+    "Date: 28th Dec 2023<br>\n",
+    "Easy Leetcode: number-of-1-bits<br>\n",
+    "Solution: https://leetcode.com/problems/number-of-1-bits/submissions/1130603960/ "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "f142b664-b62b-4c66-b742-6c942aa86451",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def hammingWeight(self, n: int) -> int:\n",
+    "        res = 0\n",
+    "        while n >= 2:\n",
+    "            res += n % 2\n",
+    "            n = n // 2\n",
+    "        return res + n\n",
+    "\n",
+    "    def hammingWeightBitOps(self, n:int) -> int:\n",
+    "        # 1000 & 1 in python is treated literally as 1000 & 0001 \n",
+    "        # 1001 & 1 in python would be treated as 1001 & 0001 \n",
+    "        res = 0\n",
+    "        while n > 0:\n",
+    "            res += n & 1\n",
+    "            n >>= 1\n",
+    "            \n",
+    "        return res\n",
+    "\n",
+    "# Test the solution\n",
+    "temp = ''.join(random.choices('01', k=32))\n",
+    "assert Solution().hammingWeight(int(temp, 2)) == temp.count('1')\n",
+    "assert Solution().hammingWeightBitOps(int(temp, 2)) == temp.count('1')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24c77394-b6b2-4356-8681-e3489654fe1c",
+   "metadata": {},
+   "source": [
+    "# 44.\n",
+    "Date: 28th Dec 2023<br>\n",
+    "Easy Leetcode: contains-duplicate<br>\n",
+    "Solution: https://leetcode.com/problems/contains-duplicate/submissions/1130609829/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "4195d403-f135-4317-80f0-9a70b9f9e094",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def containsDuplicate(self, nums: List[int]) -> bool:\n",
+    "        hashset = set()\n",
+    "        for n in nums:\n",
+    "            if n in hashset:\n",
+    "                return True\n",
+    "            hashset.add(n) \n",
+    "\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1ddd5ea-828c-48a0-b68d-43e75e37a0ca",
+   "metadata": {},
+   "source": [
+    "# 45.\n",
+    "Date: 28th Dec 2023<br>\n",
+    "Easy Leetcode: minimum-depth-of-binary-tree<br>\n",
+    "Solution: https://leetcode.com/problems/minimum-depth-of-binary-tree/submissions/1130616664/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "93dc53c9-b453-461c-b103-e32a1fc5cfe1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def walk(self, curr, depth):\n",
+    "        if curr.left is None and curr.right is None:\n",
+    "            return depth + 1\n",
+    "        elif curr.left is None:\n",
+    "            return self.walk(curr.right, depth + 1)\n",
+    "        elif curr.right is None:\n",
+    "            return self.walk(curr.left, depth + 1)\n",
+    "        else:\n",
+    "            return min(\n",
+    "                self.walk(curr.left, depth + 1),\n",
+    "                self.walk(curr.right, depth + 1)\n",
+    "            )\n",
+    "\n",
+    "    def minDepth(self, root) -> int:\n",
+    "        if root is None:\n",
+    "            return 0\n",
+    "        return self.walk(root, 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db5376dc-de8f-4a48-9752-e74ac16614f0",
+   "metadata": {},
+   "source": [
+    "# 46.\n",
+    "Date: 28th Dec 2023<br>\n",
+    "Easy Leetcode: binary-tree-postorder-traversal<br>\n",
+    "Solution: https://leetcode.com/problems/binary-tree-postorder-traversal/submissions/1130621232/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "e59ca57e-9abf-422b-852f-6d07cdad3ae0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definition for a binary tree node.\n",
+    "# class TreeNode:\n",
+    "#     def __init__(self, val=0, left=None, right=None):\n",
+    "#         self.val = val\n",
+    "#         self.left = left\n",
+    "#         self.right = right\n",
+    "class Solution:\n",
+    "    def traverse(self, curr):\n",
+    "        if curr is None:\n",
+    "            return\n",
+    "\n",
+    "        self.traverse(curr.left)\n",
+    "        self.traverse(curr.right)\n",
+    "        self.solution.append(curr.val)\n",
+    "\n",
+    "    def postorderTraversal(self, root) -> List[int]: \n",
+    "        self.solution = []\n",
+    "        self.traverse(root)\n",
+    "        return self.solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97c6f879-7840-46fa-a7cc-039035158110",
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f142b664-b62b-4c66-b742-6c942aa86451",
+   "id": "47d79d5d-3756-4e06-b70f-61173d18e48f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95b5c27a-6cf3-4266-9f89-050edfe109a1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f9e4e35-a976-4728-8415-9f0af4b8e61b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "995a2aa5-dd4a-4191-8c27-6d609a5f88fe",
    "metadata": {},
    "outputs": [],
    "source": []
