--- a/100L30D.ipynb
+++ b/100L30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 100L30D\n",
-    "![46%](https://progress-bar.dev/46?title=progress&width=100)\n",
+    "![48%](https://progress-bar.dev/48?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 100 Leetcode problems of varying difficulty in 30 days.<br>\n",
@@ -3380,7 +3380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "id": "e59ca57e-9abf-422b-852f-6d07cdad3ae0",
    "metadata": {},
    "outputs": [],
@@ -3407,36 +3407,124 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97c6f879-7840-46fa-a7cc-039035158110",
+   "cell_type": "markdown",
+   "id": "ba89bc43-c2f0-477b-9b14-71f876b2e9e6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 47.\n",
+    "Date: 29th Dec 2023<br>\n",
+    "Medium Leetcode: subsets<br>\n",
+    "Solution: https://leetcode.com/problems/subsets/submissions/1130994377/"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "id": "97c6f879-7840-46fa-a7cc-039035158110",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[], [1], [2], [1, 2], [3], [1, 3], [2, 3], [1, 2, 3]]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def combinations(self, nums, curr = []):\n",
+    "        if len(nums) == 0:\n",
+    "            self.solutions.append(curr)\n",
+    "        else:\n",
+    "            # Don't pick the current one\n",
+    "            self.combinations(nums[1:], curr)\n",
+    "\n",
+    "            # Pick the current one\n",
+    "            self.combinations(nums[1:], [*curr, nums[0]])\n",
+    "\n",
+    "    def subsets(self, nums: List[int]) -> List[List[int]]:\n",
+    "        self.solutions = []\n",
+    "        # self.combinations(nums)\n",
+    "        self.solutions = self.BFS(nums)\n",
+    "        return self.solutions\n",
+    "\n",
+    "    def BFS(self, nums):\n",
+    "        res = [[]]\n",
+    "        for n in nums:\n",
+    "            res += [comb + [n] for comb in res]\n",
+    "            \n",
+    "        return res\n",
+    "\n",
+    "# Test the soltion\n",
+    "Solution().subsets([1, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37e2798e-83d7-4070-97c3-03eb8f140e1f",
+   "metadata": {},
+   "source": [
+    "# 48.\n",
+    "Date: 29th Dec 2023<br>\n",
+    "Medium Leetcode: remove-duplicates-from-sorted-array-ii<br>\n",
+    "Solution: https://leetcode.com/problems/remove-duplicates-from-sorted-array-ii/submissions/1131023813/ "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "id": "47d79d5d-3756-4e06-b70f-61173d18e48f",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "95b5c27a-6cf3-4266-9f89-050edfe109a1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f9e4e35-a976-4728-8415-9f0af4b8e61b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def removeDuplicates(self, nums: List[int]) -> int:\n",
+    "        if len(nums) <= 2:\n",
+    "            return len(nums)\n",
+    "        \n",
+    "        # Mark the indices for deletion: O(n)\n",
+    "        cnt = 1\n",
+    "        curr = nums[0]\n",
+    "        for i in range(1, len(nums)):\n",
+    "            if nums[i] == curr:\n",
+    "                cnt += 1\n",
+    "                if cnt > 2:\n",
+    "                    nums[i] = None\n",
+    "            else:\n",
+    "                curr = nums[i]\n",
+    "                cnt = 1\n",
+    "\n",
+    "        # Shift all None to the right\n",
+    "        i, j = 0, 1\n",
+    "        while j < len(nums):\n",
+    "            if nums[i] is None:\n",
+    "                if nums[j] is None:\n",
+    "                    j += 1\n",
+    "                else:\n",
+    "                    nums[i], nums[j] = nums[j], nums[i]\n",
+    "                    i, j = i + 1, j + 1\n",
+    "            else:\n",
+    "                i, j = i + 1, j + 1\n",
+    "\n",
+    "        return len(nums) - nums.count(None)\n",
+    "\n",
+    "    def assertSolution(nums, sol):\n",
+    "        assert Solution().removeDuplicates(nums) == len(sol)\n",
+    "        assert all(n1 == n2 for n1, n2 in zip(nums, sol))\n",
+    "\n",
+    "# Test the solution\n",
+    "Solution.assertSolution([0,0,1,1,1,1,2,3,3], [0,0,1,1,2,3,3])\n",
+    "Solution.assertSolution([0,0,1,1,1,1,1,1,2,3,3,3], [0,0,1,1,2,3,3])\n",
+    "Solution.assertSolution([], [])\n",
+    "Solution.assertSolution([1,1], [1,1])\n",
+    "Solution.assertSolution([1,2], [1,2])\n",
+    "Solution.assertSolution([1,1,1], [1,1])\n",
+    "Solution.assertSolution([1,1,1,2,2,3], [1,1,2,2,3])"
+   ]
   },
   {
    "cell_type": "code",
