Day 13 - Check In

--- a/100L30D.ipynb
+++ b/100L30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 100L30D\n",
-    "![60%](https://progress-bar.dev/60?title=progress&width=100)\n",
+    "![65%](https://progress-bar.dev/65?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 100 Leetcode problems of varying difficulty in 30 days.<br>\n",
@@ -1008,7 +1008,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://tinyurl.com/QqZHkq\n"
+      "https://tinyurl.com/vZORmf\n"
      ]
     }
    ],
@@ -1775,7 +1775,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|#######################################################################| 362880/362880 [00:02<00:00, 142748.23it/s]\n"
+      "100%|#######################################################################| 362880/362880 [00:02<00:00, 135202.40it/s]\n"
      ]
     }
    ],
@@ -4283,25 +4283,334 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2e19019f-8955-4aa3-b348-833b5afa9bff",
+   "cell_type": "markdown",
+   "id": "227cea99-5804-4627-974f-3f8ba27110ff",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 61.\n",
+    "Date: 1st Jan 2024<br>\n",
+    "Medium Leetcode: valid-sudoku<br>\n",
+    "Solution: https://leetcode.com/problems/valid-sudoku/submissions/1133324344/"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
+   "id": "2e19019f-8955-4aa3-b348-833b5afa9bff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def isValidSudoku(self, board: List[List[str]]) -> bool:\n",
+    "\n",
+    "        # Save all the cells for validations \n",
+    "        # defaultdict is better than dict comprehensions\n",
+    "        columns = collections.defaultdict(set)\n",
+    "        rows = collections.defaultdict(set)\n",
+    "        grids = collections.defaultdict(set)\n",
+    "\n",
+    "        for i in range(9):\n",
+    "            for j in range(9):\n",
+    "                cell = board[i][j]\n",
+    "                if cell != '.':\n",
+    "\n",
+    "                    columnIdx = j\n",
+    "                    rowIdx = i\n",
+    "                    gridIdx = (3 * (j // 3)) + (i // 3)\n",
+    "\n",
+    "                    if cell in columns[columnIdx] or cell in rows[rowIdx] or cell in grids[gridIdx]:\n",
+    "                        return False\n",
+    "                    else:\n",
+    "                        columns[columnIdx].add(cell)\n",
+    "                        rows[rowIdx].add(cell)\n",
+    "                        grids[gridIdx].add(cell)\n",
+    "        \n",
+    "        return True\n",
+    "\n",
+    "# Test the solution\n",
+    "Solution().isValidSudoku(\n",
+    "    [\n",
+    "        [\"5\",\"3\",\".\",\".\",\"7\",\".\",\".\",\".\",\".\"],\n",
+    "        [\"6\",\".\",\".\",\"1\",\"9\",\"5\",\".\",\".\",\".\"],\n",
+    "        [\".\",\"9\",\"8\",\".\",\".\",\".\",\".\",\"6\",\".\"],\n",
+    "        [\"8\",\".\",\".\",\".\",\"6\",\".\",\".\",\".\",\"3\"],\n",
+    "        [\"4\",\".\",\".\",\"8\",\".\",\"3\",\".\",\".\",\"1\"],\n",
+    "        [\"7\",\".\",\".\",\".\",\"2\",\".\",\".\",\".\",\"6\"],\n",
+    "        [\".\",\"6\",\".\",\".\",\".\",\".\",\"2\",\"8\",\".\"],\n",
+    "        [\".\",\".\",\".\",\"4\",\"1\",\"9\",\".\",\".\",\"5\"],\n",
+    "        [\".\",\".\",\".\",\".\",\"8\",\".\",\".\",\"7\",\"9\"]\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04f48075-f685-4c00-877f-7dce510423e8",
+   "metadata": {},
+   "source": [
+    "# 62.\n",
+    "Date: 1st Jan 2024<br>\n",
+    "Easy Leetcode: linked-list-cycle<br>\n",
+    "Solution: https://leetcode.com/problems/linked-list-cycle/submissions/1133437430/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "id": "406cacc9-aa3b-4518-9704-b5761674e859",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def hasCycle(self, head: ListNode) -> bool:\n",
+    "\n",
+    "        if not head or not head.next:\n",
+    "            return False\n",
+    "\n",
+    "        slow = fast = head \n",
+    "        while fast and fast.next:\n",
+    "            slow = slow.next\n",
+    "            fast = fast.next.next\n",
+    "            if fast == slow:\n",
+    "                return True\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "# Test the solution\n",
+    "temp = [ListNode(val=1), ListNode(val=2)]\n",
+    "temp[0].next = temp[1]\n",
+    "temp[1].next = temp[0]\n",
+    "temp = temp[0]\n",
+    "assert Solution().hasCycle(temp)\n",
+    "\n",
+    "temp = [ListNode(val=1), ListNode(val=2), ListNode(val=3)]\n",
+    "temp[0].next = temp[1]\n",
+    "temp[1].next = temp[2]\n",
+    "temp[2].next = temp[1]\n",
+    "temp = temp[0]\n",
+    "assert Solution().hasCycle(temp)\n",
+    "\n",
+    "temp = [ListNode(val=1), ListNode(val=2), ListNode(val=3)]\n",
+    "temp[0].next = temp[1]\n",
+    "temp[1].next = temp[2]\n",
+    "temp = temp[0]\n",
+    "assert Solution().hasCycle(temp) == False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eef1c544-83df-499c-8a67-451484359715",
+   "metadata": {},
+   "source": [
+    "# 63.\n",
+    "Date: 1st Jan 2024<br>\n",
+    "Easy Leetcode: reverse-linked-list<br>\n",
+    "Solution: https://leetcode.com/problems/reverse-linked-list/submissions/1133465358/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "3ba85354-39e6-42f1-af08-4c7107fb144e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    \n",
+    "    root = None\n",
+    "    \n",
+    "    def reverseListRecurse(self, head: ListNode):\n",
+    "        def reverse(curr):\n",
+    "            if curr.next is None:\n",
+    "                self.root = curr \n",
+    "                return curr\n",
+    "\n",
+    "            next_node = reverse(curr.next)\n",
+    "            next_node.next = curr\n",
+    "            return curr\n",
+    "        \n",
+    "        if head is None or head.next is None:\n",
+    "            return head\n",
+    "        else:\n",
+    "            tail = reverse(head)\n",
+    "            tail.next = None\n",
+    "            return self.root\n",
+    "\n",
+    "    def reverseListIterate(self, head):\n",
+    "        prev, curr = None, head\n",
+    "        while curr:\n",
+    "            curr.next, curr, prev = prev, curr.next, curr\n",
+    "        return prev\n",
+    "\n",
+    "# Test the solution\n",
+    "temp = [1, 2, 3, 4, 5]\n",
+    "assert Solution().reverseListIterate(ListNode.to_singly_linked_list(temp)).to_list() == Solution().reverseListRecurse(ListNode.to_singly_linked_list(temp)).to_list()\n",
+    "temp = [1]\n",
+    "assert Solution().reverseListIterate(ListNode.to_singly_linked_list(temp)).to_list() == Solution().reverseListRecurse(ListNode.to_singly_linked_list(temp)).to_list()\n",
+    "temp = [1, 2]\n",
+    "assert Solution().reverseListIterate(ListNode.to_singly_linked_list(temp)).to_list() == Solution().reverseListRecurse(ListNode.to_singly_linked_list(temp)).to_list()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a4808f2-7e65-49e3-8e3c-f96cff69d803",
+   "metadata": {},
+   "source": [
+    "# 64.\n",
+    "Date: 1st Jan 2024<br>\n",
+    "Easy Leetcode: remove-linked-list-elements<br>\n",
+    "Solution: https://leetcode.com/problems/remove-linked-list-elements/submissions/1133510023/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "ad59a694-3857-4b3d-8161-a018935927b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def removeElements(self, head: ListNode, val: int) -> ListNode:\n",
+    "        prev, curr = None, head\n",
+    "        while curr:\n",
+    "            \n",
+    "            # Delete the node\n",
+    "            if curr.val == val:\n",
+    "                if prev:\n",
+    "                    prev.next = prev.next.next\n",
+    "                    curr.next = None\n",
+    "                    curr = prev.next\n",
+    "                else:\n",
+    "                    head = head.next\n",
+    "                    curr.next = None\n",
+    "                    curr = head\n",
+    "\n",
+    "            # Skip the element\n",
+    "            else:\n",
+    "                prev, curr = curr, curr.next\n",
+    "\n",
+    "        return head\n",
+    "\n",
+    "# Test the solution\n",
+    "assert Solution().removeElements(ListNode.to_singly_linked_list([1,1,2,2,3,4]), 1).to_list() == [2, 2, 3, 4]\n",
+    "assert Solution().removeElements(ListNode.to_singly_linked_list([1,1,1,1]), 1) is None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5405943-1fb1-4857-976c-254e9f871215",
+   "metadata": {},
+   "source": [
+    "# 65.\n",
+    "Date: 1st Jan 2024<br>\n",
+    "Medium Leetcode: flatten-binary-tree-to-linked-list<br>\n",
+    "Solution: https://leetcode.com/problems/flatten-binary-tree-to-linked-list/submissions/1133605449/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6ed5c870-530c-43b9-b62f-7e23b97ed187",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def DFS1(root):\n",
+    "        if not root:\n",
+    "            return []\n",
+    "\n",
+    "        return [root] + Solution.DFS1(root.left) + Solution.DFS1(root.right)\n",
+    "\n",
+    "    def flatten1(self, root: BinaryTreeNode) -> None:\n",
+    "        \"\"\"\n",
+    "        Do not return anything, modify root in-place instead.\n",
+    "        pre-order traversal: root, left, right\n",
+    "        \"\"\"  \n",
+    "\n",
+    "        # Edge case\n",
+    "        if root is None or (root.left is None and root.right is None):\n",
+    "            return root\n",
+    "\n",
+    "        flattened = Solution.DFS1(root)\n",
+    "        prev = None\n",
+    "        for node in flattened[::-1]:\n",
+    "            node.left = None\n",
+    "            node.right = prev\n",
+    "            prev = node\n",
+    "            \n",
+    "        return flattened[0]\n",
+    "        \n",
+    "    def DFS2(self, root: BinaryTreeNode) -> None:\n",
+    "        if not root.left and not root.right:\n",
+    "            return root, root\n",
+    "            \n",
+    "        else:\n",
+    "\n",
+    "            # Only right subtree exists\n",
+    "            if not root.left:\n",
+    "                right_begin, right_end = self.DFS2(root.right)\n",
+    "                root.right = right_begin\n",
+    "                end = right_end\n",
+    "\n",
+    "            # Only left subtree exists\n",
+    "            elif not root.right:\n",
+    "                left_begin, left_end = self.DFS2(root.left)\n",
+    "                root.right = left_begin\n",
+    "                end = left_end\n",
+    "\n",
+    "            # Both subtrees exists, we need to link them both\n",
+    "            else:\n",
+    "                right_begin, right_end = self.DFS2(root.right)\n",
+    "                left_begin, left_end = self.DFS2(root.left)\n",
+    "                root.right = left_begin\n",
+    "                left_end.right = right_begin\n",
+    "                end = right_end\n",
+    "            \n",
+    "            root.left = None \n",
+    "            return root, end\n",
+    "        \n",
+    "    def flatten2(self, root: BinaryTreeNode) -> None:\n",
+    "        \n",
+    "        # Edge case\n",
+    "        if root is None or (root.left is None and root.right is None):\n",
+    "            return root\n",
+    "            \n",
+    "        return self.DFS2(root)[0]\n",
+    "\n",
+    "    # https://www.youtube.com/watch?v=sWf7k1x9XR4\n",
+    "    prev = None\n",
+    "    def flatten(self, root: BinaryTreeNode) -> None:\n",
+    "        if not root:\n",
+    "            return\n",
+    "\n",
+    "        # change the traversal order to right, left and root (inverse of pre order traversal)\n",
+    "        self.flatten(root.right)\n",
+    "        self.flatten(root.left)\n",
+    "        root.right = self.prev\n",
+    "        root.left = None\n",
+    "        self.prev = root\n",
+    "        return root\n",
+    "    \n",
+    "# Test the solution\n",
+    "temp = Solution().flatten(BinaryTreeNode.from_array([1,2,5,3,4,None,6])).to_list()\n",
+    "assert all(map(lambda x: x[0] == x[1], zip(temp, [1,None,2,None,3,None,4,None,5,None,6])))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18cb2744-a316-48f9-b5a9-f101caf76786",
+   "id": "de12904b-f474-4082-b621-2877766b00f3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4309,7 +4618,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b47b399-92dc-44aa-a1bd-6b29dc330f14",
+   "id": "f681c77b-1972-4e0e-bcbc-f18d77019d8b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40ee0d82-2784-493d-bdf7-c821be25a1ea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2923d25f-196d-4dac-8d97-2538e479dcae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdcf9b19-5dbf-4f32-a64c-abe7c8ee36f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d729bff5-7a55-4e03-89d6-4d0ce5a6dd05",
    "metadata": {},
    "outputs": [],
    "source": []
